--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
 	<body>
 
 		<h1 align="middle">CS 194 Final Project</h1>
-		<h2 align="middle">Yash Agarwal and Devesh Agarwal</h2>
+		<h1 align="middle">Yash Agarwal and Devesh Agarwal</h2>
 		<h4 align="middle">Website Credit: Rami Moustafa, cs194-26-abo</h4>
 
 
-		<br><br>
+		<br>
 
 			<h2 align="middle">Project Selection</h2>
 				<p> 
@@ -60,7 +60,7 @@
 			
 				<h2 align="middle-left"> OpenCV Tracker</h2>
 				<p>
-					Using OpenCV tracker, we then kept track of the points identified in the first frame through the consecutive frames of the video. We used a bounding box of 20x20 pixels in order to achieve this successfully. 
+					Using OpenCV tracker, we then kept track of the points identified in the first frame through the consecutive frames of the video. We used a bounding box of 20x20 pixels in order to achieve this successfully. We used the CSRT tracker instead of the Median Flow as the median flow tracker would result in larger and larger bounding boxes.
 				</p>
 
 <iframe src="https://drive.google.com/file/d/1nFkwT9Q4jaROMvw0ct42z6IdNt6KqoZy/preview" width="640" height="480"></iframe>
@@ -208,7 +208,7 @@
 
 				<h2 align="middle-left"> Bells and Whistles </h2>
 				<p>
-					We used the same process on custom images of our own and computed the following results:
+					We used the same process on custom images of our own and computed the following results. We created a grid of 5x5 equally spaced points and put an iPhone at each of those point click 25 images of the ceiling. I think this wasn't successful as the change between consecutive images in the grid is a lot more than it should be. The angle also changes between images due to human error and we definitely need more images to get a more focused image.
 				</p>
 				
 
@@ -238,7 +238,7 @@
 
 				<hr>
 
-				<h2 align="middle">Project 3: Reimplimentation of "A Neural Algorithm of Artistic Style"</h2>
+				<h2 align="middle">Project 3: Re-implimentation of "A Neural Algorithm of Artistic Style"</h2>
 
 				<h2 align="middle-left">Overview</h2>
 				<p>
@@ -480,56 +480,6 @@
 				  </table>
 				</div>
 
-				<hr>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-						
+				<hr>						
 	</body>
 </html>
